# pure_street_esn

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md
apps/dashboard/: README.md  package.json
apps/mobile/: README.md  app.json  package.json
apps/web-reporting/: README.md  package.json
data/: README.md
data/schemas/: corridor-score.schema.json  hazard-report.schema.json  sensor-reading.schema.json  verification.schema.json
data/taxonomy/: hazard-categories.yml  severity-levels.yml  tags.yml
docs/00-overview/: assumptions-and-non-goals.md  glossary.md  master-repository-specification.md  master-system-definition.md  mission-and-theory-of-change.md  problem-statement.md  stakeholder-map.md
docs/01-architecture/: data-architecture.md  integration-map.md  scalability-notes.md  security-privacy-model.md  system-architecture.md  threat-model.md
docs/02-product/: accessibility.md  analytics-plan.md  localization.md  product-requirements-document.md  ui-ux-principles.md  user-stories.md
docs/03-data-and-models/: corridor-risk-modeling.md  dedup-and-clustering.md  evaluation-metrics.md  hazard-taxonomy.md  scoring-spec.md  sensor-data-spec.md
docs/04-operations/: field-ops-playbook.md  incident-response.md  partner-onboarding.md  sla-and-triage.md  (+1 more)
infra/: README.md
infra/k8s/: README.md
integrations/: README.md
scripts/: backfill_corridor_scores.py  export_monthly_reports.py  generate_open_data_snapshot.py  import_311_dump.py  seed_db.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/app/: __init__.py  main.py
services/api/src/app/routers/: __init__.py  health.py  reports.py
services/api/tests/: test_health.py  test_reports.py
services/notifications/: README.md  pyproject.toml
services/notifications/src/esn_notifications/: __init__.py
services/scoring/: README.md  pyproject.toml
services/scoring/src/esn_scoring/: __init__.py  corridor_calc.py
services/scoring/tests/: test_corridor_calc.py
services/sensor-intelligence/: README.md  pyproject.toml
services/sensor-intelligence/src/esn_sensor_intelligence/: __init__.py  sentinel_network.py
services/sensor-intelligence/tests/: test_sentinel_network.py
services/verifier/: README.md  pyproject.toml
services/verifier/src/esn_verifier/: __init__.py  dedup.py
services/verifier/tests/: test_dedup.py
tools/: README.md
(+59 files in other folders)
