[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esn-verifier"
version = "0.1.0"
description = "Duplicate detection and verification utilities for ESN"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
testpaths = ["tests"]